Refactor TaskController to improve readability and maintainability